加密传输，代码优化

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,12 +1,20 @@
 appname = httpMonitor
+
 #web管理端口
 httpport = 8080
+
 #启动模式dev|pro
 runmode = dev
+
 #web管理密码
 password=123
+
 #http监听端口
 hostPort=8028
-#basic auth认证用户名和密码
+
+#basic auth认证用户名和密码，为空则不验证
 auth.user=test
 auth.password=1234
+
+#是否加密传输（0|1）
+crypt=1
