--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,10 +1,10 @@
-appname = httpMonitor
+appname = easyProxy
 
 #web管理端口
 httpport = 8080
 
 #启动模式dev|pro
-runmode = dev
+runmode = pro
 
 #web管理密码
 password=123
@@ -12,9 +12,9 @@ password=123
 #http监听端口
 hostPort=8028
 
-#basic auth认证用户名和密码，为空则不验证
-auth.user=test
-auth.password=1234
+#basic auth认证用户名和密码，为空则不验证，全局控制
+auth.user=
+auth.password=
 
-#是否加密传输（0|1）
-crypt=1
+#是否加密传输（0|1），全局控制
+crypt=0
