--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,11 +9,20 @@ runmode = dev
 #web管理密码
 password=123
 
-#http监听端口
-hostPort=80
-
 ##客户端与服务端通信端口
 tcpport=8284
 
 #web api免验证IP地址
 authip=127.0.0.1
+
+##http代理端口
+httpProxyPort=80
+
+##https代理端口
+httpsProxyPort=443
+
+##certFile绝对路径
+pemPath=/etc/nginx/certificate.crt
+
+##keyFile绝对路径
+keyPath=/etc/nginx/private.key
