--- a/conf/app.conf
+++ b/conf/app.conf
@@ -19,7 +19,7 @@ authip=127.0.0.1
 httpProxyPort=80
 
 ##https代理端口
-httpsProxyPort=443
+httpsProxyPort=
 
 ##certFile绝对路径
 pemPath=/etc/nginx/certificate.crt
