安装 守护进程优化 web修改

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,7 @@
 appname = nps
 
 #web管理端口
-httpport = 8080
+httpport = 8081
 
 #启动模式dev|pro
 runmode = dev
@@ -15,10 +15,10 @@ tcpport=8284
 #web api免验证IP地址
 authip=127.0.0.1
 
-##http代理端口
+##http代理端口,为空则不启动
 httpProxyPort=80
 
-##https代理端口
+##https代理端口,为空则不启动
 httpsProxyPort=
 
 ##certFile绝对路径
