结构调整、kcp支持

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,28 +1,33 @@
 appname = nps
 
-#web管理端口
-httpport = 8081
+#Web Management Port
+httpport = 8080
 
-#启动模式dev|pro
+#Boot mode(dev|pro)
 runmode = dev
 
-#web管理密码
+#Web Management Password
 password=123
 
-##客户端与服务端通信端口
-tcpport=8284
+##Communication Port between Client and Server
+##If the data transfer mode is tcp, it is TCP port
+##If the data transfer mode is kcp, it is UDP port
+bridgePort=8284
 
-#web api免验证IP地址
+#Web API unauthenticated IP address
 authip=127.0.0.1
 
-##http代理端口,为空则不启动
+##HTTP proxy port, no startup if empty
 httpProxyPort=80
 
-##https代理端口,为空则不启动
+##HTTPS proxy port, no startup if empty
 httpsProxyPort=
 
-##certFile绝对路径
+##certFile absolute path
 pemPath=/etc/nginx/certificate.crt
 
-##keyFile绝对路径
+##KeyFile absolute path
 keyPath=/etc/nginx/private.key
+
+##Data transmission mode(kcp or tcp)
+bridgeType=tcp
