客户端配置，端口白名单等

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -31,3 +31,10 @@ keyPath=/etc/nginx/private.key
 
 ##Data transmission mode(kcp or tcp)
 bridgeType=tcp
+
+# Public password, which clients can use to connect to the server
+# After the connection, the server will be able to open relevant ports and parse related domain names according to its own configuration file.
+publicVkey=123
+
+#Open ports allowed on the server side
+allowPorts=9001-9009,10001,11000-12000
