Url路由 泛解析

--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -2,32 +2,35 @@
 server=127.0.0.1:8284
 tp=tcp
 vkey=123
-username=111
-password=222
 compress=snappy
 crypt=true
 auto_reconnection=true
+
 [web1]
 host=a.o.com
-host_change=www.sina.com
-target=127.0.0.1:8080,127.0.0.1:8082
-header_cookkile=122123
-header_user-Agent=122123
+host_change=www.proxy.com
+target=127.0.0.1:8080
+
 [web2]
-host=www.baidu.com
-host_change=www.sina.com
+host=a.proxy.com
 target=127.0.0.1:8080,127.0.0.1:8082
-header_cookkile="122123"
-header_user-Agent=122123
-[tunnel1]
+host_change=www.proxy.com
+header_set_proxy=nps
+
+[tcp]
+mode=tcpServer
+target=8001-8005,8006
+port=9001-9005,9006
+
+[socks5]
+mode=socks5Server
+port=9007
+
+[http]
+mode=httpProxyServer
+port=9008
+
+[udp]
 mode=udpServer
-target=127.0.0.1:8080
-port=9001
-[tunnel2]
-mode=tunnelServer
-target=127.0.0.1:8080
-port=9001
-[tunnel3]
-mode=tunnelServer
-target=127.0.0.1:8080
-port=9002
+port=9009
+target=114.114.114.114:53
