--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -1,5 +1,5 @@
 [common]
-server=123.206.77.88:8284
+server=127.0.0.1:8284
 tp=tcp
 vkey=123
 compress=snappy
@@ -7,12 +7,11 @@ crypt=true
 auto_reconnection=true
 username=111
 password=222
-proxy_socks5_url=socks5://111:222@118.89.159.126:8024
 [web1]
 host=a.o.com
 host_change=www.proxy.com
 target=127.0.0.1:8080
-location=/test2
+location=/
 
 [web2]
 host=a.proxy.com
