bug repair when high concurrent

--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -3,11 +3,11 @@ server=127.0.0.1:8284
 tp=tcp
 vkey=123
 auto_reconnection=true
-
+crypt=true
 [web1]
 host=a.o.com
 host_change=www.proxy.com
-target=127.0.0.1:8080
+target=127.0.0.1:8082
 location=/
 
 [web2]
@@ -18,7 +18,7 @@ header_set_proxy=nps
 
 [tcp]
 mode=tcpServer
-target=8001-8005,8080
+target=8001-8005,8082
 port=9001-9005,9006
 
 [socks5]
