--- a/conf/app.conf
+++ b/conf/app.conf
@@ -36,4 +36,11 @@ bridgeType=tcp
 # After the connection, the server will be able to open relevant ports and parse related domain names according to its own configuration file.
 publicVkey=123
 
+#Traffic data persistence interval(minute)
+#Ignorance means no persistence
+flowStoreInterval=1
 
+#log level
+#LevelEmergency->0  LevelAlert->1 LevelCritical->2 LevelError->3 LevelWarning->4
+#LevelNotice->5 LevelInformational->6 LevelDebug->7
+logLevel=7
