--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -4,32 +4,24 @@ tp=tcp
 vkey=123
 auto_reconnection=true
 crypt=true
+
 [web1]
 host=a.o.com
 host_change=www.proxy.com
-target=127.0.0.1:8082
+target=127.0.0.1:8080
 location=/
 
 [web2]
-host=a.proxy.com
-target=127.0.0.1:8080,127.0.0.1:8082
+host=127.0.0.1
 host_change=www.proxy.com
-header_set_proxy=nps
+target=127.0.0.1:8080
+location=/cdn
 
-[tcp]
-mode=tcpServer
-target=8001-8005,8082
-port=9001-9005,9006
+[ssh_1118]
+mode=secretServer
+password=1111
+target=123.206.77.88:22
 
-[socks5]
-mode=socks5Server
-port=9007
-
-[http]
-mode=httpProxyServer
-port=9008
-
-[udp]
-mode=udpServer
-port=53
-target=114.114.114.114:53
+[secret_ssh]
+password=1111
+port=1000
