--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -3,7 +3,6 @@ server=127.0.0.1:8284
 tp=tcp
 vkey=123
 auto_reconnection=true
-crypt=true
 
 [web1]
 host=a.o.com
@@ -22,6 +21,19 @@ mode=secretServer
 password=1111
 target=123.206.77.88:22
 
-[secret_ssh]
-password=1111
-port=1000
+[tcp]
+mode=tcpServer
+target=127.0.0.1:8080
+port=9006
+
+[socks5]
+mode=socks5Server
+port=9005
+
+[http]
+mode=httpProxyServer
+port=9004
+
+[udp]
+mode=httpProxyServer
+port=9003
