--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -38,9 +38,13 @@ publicVkey=123
 
 #Traffic data persistence interval(minute)
 #Ignorance means no persistence
-flowStoreInterval=1
+#flowStoreInterval=1
 
 #log level
 #LevelEmergency->0  LevelAlert->1 LevelCritical->2 LevelError->3 LevelWarning->4
 #LevelNotice->5 LevelInformational->6 LevelDebug->7
-logLevel=7
+#logLevel=7
+
+#Whether to restrict IP access, true or false or ignore
+#ipLimit=true
+
