--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -1,5 +1,5 @@
 [common]
-server=127.0.0.1:8284
+server=123.206.77.88:8284
 tp=tcp
 vkey=123
 auto_reconnection=true
@@ -16,10 +16,6 @@ host_change=www.proxy.com
 target=127.0.0.1:8080
 location=/cdn
 
-[ssh_1118]
-mode=secretServer
-password=1111
-target=123.206.77.88:22
 
 [tcp]
 mode=tcpServer
@@ -38,3 +34,7 @@ port=9004
 mode=udpServer
 port=9003
 target=114.114.114.53
+
+[p2p_ssh]
+port=2000
+password=p2pssh
