redo web UI  |web close| client log |system info |p2p |max、ump optimization

--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -1,40 +1,39 @@
 [common]
-server=123.206.77.88:8284
+server=127.0.0.1:8284
 tp=tcp
 vkey=123
 auto_reconnection=true
 
-[web1]
-host=a.o.com
-host_change=www.proxy.com
-target=127.0.0.1:8080
-location=/
-
-[web2]
-host=127.0.0.1
-host_change=www.proxy.com
-target=127.0.0.1:8080
-location=/cdn
-
-
 [tcp]
-mode=tcpServer
-target=127.0.0.1:8080
-port=9006
+mode=tcp
+target=8006-8010,8012
+port=9006-9010,9012
+targetAddr=123.206.77.88
 
 [socks5]
-mode=socks5Server
+mode=socks5
 port=9005
 
 [http]
-mode=httpProxyServer
+mode=httpProxy
 port=9004
 
+[s_ssh]
+mode=secret
+password=1234
+target=123.206.77.88:22
+
 [udp]
-mode=udpServer
-port=9003
-target=114.114.114.53
+mode=udp
+port=53
+target=114.114.114.114:53
 
 [p2p_ssh]
-port=2000
+port=2001
 password=p2pssh
+target=123.206.77.88:22
+
+
+[secret_ssh]
+port=2002
+password=1234
