--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -1,7 +1,7 @@
 appname = nps
 
 #Web Management Port
-httpport = 8080
+httpport =
 
 #Boot mode(dev|pro)
 runmode = dev
@@ -9,13 +9,18 @@ runmode = dev
 #Web Management Password
 password=123
 
+username=admin
+
 ##Communication Port between Client and Server
 ##If the data transfer mode is tcp, it is TCP port
 ##If the data transfer mode is kcp, it is UDP port
 bridgePort=8284
 
 #Web API unauthenticated IP address
-authip=127.0.0.1
+authKey=test
+
+##web API get password
+cryptKey = "1234567812345678"
 
 ##HTTP proxy port, no startup if empty
 httpProxyPort=80
@@ -47,4 +52,9 @@ publicVkey=123
 
 #Whether to restrict IP access, true or false or ignore
 #ipLimit=true
+
+serverIp=127.0.0.1
+
+#p2p udp port
+p2pPort=6000
 
