File mode|pubVkey optimization

--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -4,6 +4,9 @@ tp=tcp
 vkey=123
 auto_reconnection=true
 
+[web]
+host=a.o.com
+target=127.0.0.1:8080
 [tcp]
 mode=tcp
 target=8006-8010,8012
@@ -17,6 +20,13 @@ port=9005
 [http]
 mode=httpProxy
 port=9004
+
+
+[file]
+mode=file
+port=9100
+local_path=./
+strip_pre=/web/
 
 [s_ssh]
 mode=secret
