--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -53,8 +53,9 @@ publicVkey=123
 #Whether to restrict IP access, true or false or ignore
 #ipLimit=true
 
-serverIp=127.0.0.1
+#must set when use p2p
+#serverIp=127.0.0.1
 
 #p2p udp port
-p2pPort=6000
+#p2pPort=6000
 
