Port mux| https|tls crypt

--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -1,12 +1,11 @@
 [common]
-server=127.0.0.1:8284
+server=127.0.0.1:8024
 tp=tcp
 vkey=123
 auto_reconnection=true
-
 [web]
-host=a.o.com
-target=127.0.0.1:8080
+host=b.o.com
+target=127.0.0.1:8082
 [tcp]
 mode=tcp
 target=8006-8010,8012
