--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -1,61 +1,47 @@
 appname = nps
-
-#Web Management Port
-httpport = 8080
-
 #Boot mode(dev|pro)
 runmode = dev
 
-#Web Management Password
-password=123
-
-username=admin
-
-##Communication Port between Client and Server
-##If the data transfer mode is tcp, it is TCP port
-##If the data transfer mode is kcp, it is UDP port
-bridgePort=8284
-
 #Web API unauthenticated IP address
-authKey=test
+#auth_key=test
+#auth_crypt_key =1234567812345678
 
-##web API get password
-cryptKey = "1234567812345678"
+#HTTP(S) proxy port, no startup if empty
+http_proxy_port=80
+https_proxy_port=445
+#certFile absolute path
+pem_path=conf/server.pem
+#KeyFile absolute path
+key_path=conf/server.key
 
-##HTTP proxy port, no startup if empty
-httpProxyPort=80
-
-##HTTPS proxy port, no startup if empty
-httpsProxyPort=
-
-##certFile absolute path
-pemPath=/etc/nginx/certificate.crt
-
-##KeyFile absolute path
-keyPath=/etc/nginx/private.key
-
-##Data transmission mode(kcp or tcp)
-bridgeType=tcp
+##bridge
+bridge_type=tcp
+bridge_port=8024
+bridge_ip=0.0.0.0
 
 # Public password, which clients can use to connect to the server
 # After the connection, the server will be able to open relevant ports and parse related domain names according to its own configuration file.
-publicVkey=123
+public_vkey=123
 
 #Traffic data persistence interval(minute)
 #Ignorance means no persistence
-#flowStoreInterval=1
+#flow_store_interval=1
 
-#log level
-#LevelEmergency->0  LevelAlert->1 LevelCritical->2 LevelError->3 LevelWarning->4
-#LevelNotice->5 LevelInformational->6 LevelDebug->7
-#logLevel=7
+# log level LevelEmergency->0  LevelAlert->1 LevelCritical->2 LevelError->3 LevelWarning->4 LevelNotice->5 LevelInformational->6 LevelDebug->7
+#log_level=7
 
 #Whether to restrict IP access, true or false or ignore
-#ipLimit=true
+#ip_limit=true
 
-#must set when use p2p
-#serverIp=127.0.0.1
+#p2p
+#p2p_ip=127.0.0.1
+#p2p_port=6000
 
-#p2p udp port
-#p2pPort=6000
+#web
+web_host=c.o.com
+web_username=admin
+web_password=123
+web_port = 8080
+web_ip=0.0.0.0
 
+#allow_ports=9001-9009,10001,11000-12000
