--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -1,16 +1,25 @@
 [common]
-server=127.0.0.1:8024
+server={{.NPS_SERVER_ADDR}}
 tp=tcp
-vkey=123
+vkey={{.NPS_SERVER_VKEY}}
 auto_reconnection=true
 [web]
 host=b.o.com
 target=127.0.0.1:8082
+health_check_timeout = 3
+health_check_max_failed = 3
+health_check_interval = 10
+health_http_url=/
+
 [tcp]
 mode=tcp
 target=8006-8010,8012
 port=9006-9010,9012
 targetAddr=123.206.77.88
+health_check_timeout = 3
+health_check_max_failed = 3
+health_check_interval = 10
+health_http_url=/
 
 [socks5]
 mode=socks5
