--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -2,13 +2,11 @@ appname = nps
 #Boot mode(dev|pro)
 runmode = dev
 
-#Web API unauthenticated IP address
-#auth_key=test
-#auth_crypt_key =1234567812345678
+
 
 #HTTP(S) proxy port, no startup if empty
 http_proxy_port=80
-https_proxy_port=445
+https_proxy_port=443
 #certFile absolute path
 pem_path=conf/server.pem
 #KeyFile absolute path
@@ -43,5 +41,8 @@ web_username=admin
 web_password=123
 web_port = 8080
 web_ip=0.0.0.0
+#Web API unauthenticated IP address
+auth_key=test
+auth_crypt_key =1234567812345678
 
 #allow_ports=9001-9009,10001,11000-12000
