--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -1,25 +1,33 @@
 [common]
-server={{.NPS_SERVER_ADDR}}
+server=127.0.0.1:8024
 tp=tcp
-vkey={{.NPS_SERVER_VKEY}}
+vkey=2dyy78gj7b9zw09l
 auto_reconnection=true
 [web]
 host=b.o.com
-target=127.0.0.1:8082
-health_check_timeout = 3
-health_check_max_failed = 3
-health_check_interval = 10
+target=10.1.50.203:80
+
+[health_check_test1]
+health_check_timeout=1
+health_check_max_failed=3
+health_check_interval=1
 health_http_url=/
+health_check_type=http
+health_check_target=127.0.0.1:8083,127.0.0.1:8082
+
+[health_check_test2]
+health_check_timeout=1
+health_check_max_failed=3
+health_check_interval=1
+health_check_type=tcp
+health_check_target=127.0.0.1:8083,127.0.0.1:8082
+
 
 [tcp]
 mode=tcp
-target=8006-8010,8012
-port=9006-9010,9012
+target=127.0.0.1:8083,127.0.0.1:8082
+port=9006
 targetAddr=123.206.77.88
-health_check_timeout = 3
-health_check_max_failed = 3
-health_check_interval = 10
-health_http_url=/
 
 [socks5]
 mode=socks5
