--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -6,7 +6,7 @@ runmode = dev
 
 #HTTP(S) proxy port, no startup if empty
 http_proxy_port=80
-https_proxy_port=443
+#https_proxy_port=8024
 #certFile absolute path
 pem_path=conf/server.pem
 #KeyFile absolute path
@@ -26,7 +26,7 @@ public_vkey=123
 #flow_store_interval=1
 
 # log level LevelEmergency->0  LevelAlert->1 LevelCritical->2 LevelError->3 LevelWarning->4 LevelNotice->5 LevelInformational->6 LevelDebug->7
-#log_level=7
+log_level=7
 
 #Whether to restrict IP access, true or false or ignore
 #ip_limit=true
@@ -36,7 +36,7 @@ public_vkey=123
 #p2p_port=6000
 
 #web
-web_host=c.o.com
+web_host=a.o.com
 web_username=admin
 web_password=123
 web_port = 8080
