--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -6,7 +6,8 @@ runmode = dev
 
 #HTTP(S) proxy port, no startup if empty
 http_proxy_port=80
-#https_proxy_port=8024
+#https_proxy_port=443
+https_just_proxy=true
 #certFile absolute path
 pem_path=conf/server.pem
 #KeyFile absolute path
