nps some config hot reload

--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -47,4 +47,5 @@ auth_crypt_key =1234567812345678
 
 #allow_ports=9001-9009,10001,11000-12000
 
+#Web management multi-user login
 #allow_user_login=true
