public key bug and multiuser enhancement and server ip support and config file of client optimization

--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -1,7 +1,7 @@
 [common]
-server=127.0.0.1:8024
-tp=tcp
-vkey=123
+server_addr=127.0.0.1:8024
+conn_type=tcp
+vkey=nps
 auto_reconnection=true
 
 [health_check_test1]
@@ -20,39 +20,38 @@ health_check_type=tcp
 health_check_target=127.0.0.1:8083,127.0.0.1:8082
 [web]
 host=b.o.com
-target=127.0.0.1:8080
+target_addr=127.0.0.1:8080
 
 [tcp]
 mode=tcp
-target=127.0.0.1:8083,127.0.0.1:8082
-port=9006
-targetAddr=123.206.77.88
+target=127.0.0.1:8080
+server_port=10000
 
 [socks5]
 mode=socks5
-port=9005
+server_port=9005
 
 [http]
 mode=httpProxy
-port=9004
+server_port=9004
 
 
 [file]
 mode=file
-port=9009
+server_port=9009
 local_path=./
 strip_pre=/web/
 
 [udp]
 mode=udp
-port=53
-target=114.114.114.114:53
+server_port=53
+target_addr=114.114.114.114:53
 
 [secret_ssh]
-port=2001
+local_port=2001
 password=sec
 
 [p2p_ssh]
-port=2002
-password=c
-target=123.206.77.88:22
+local_port=2002
+password=ppp
+target_addr=192.168.74.199:22
