--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -6,6 +6,7 @@ runmode = pro
 http_proxy_port=80
 https_proxy_port=443
 https_just_proxy=true
+http_proxy_ip=0.0.0.0
 #certFile absolute path
 #pem_path=conf/server.pem
 #KeyFile absolute path
