--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -1,7 +1,7 @@
 [common]
 server_addr=127.0.0.1:8024
 conn_type=tcp
-vkey=nps
+vkey=123
 auto_reconnection=true
 
 [health_check_test1]
@@ -20,11 +20,11 @@ health_check_type=tcp
 health_check_target=127.0.0.1:8083,127.0.0.1:8082
 [web]
 host=b.o.com
-target_addr=127.0.0.1:8080
+target_addr=127.0.0.1:8080,127.0.0.1:8082
 
 [tcp]
 mode=tcp
-target=127.0.0.1:8080
+target_addr=127.0.0.1:8080
 server_port=10000
 
 [socks5]
