Https defaule support

--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -3,10 +3,13 @@ appname = nps
 runmode = pro
 
 #HTTP(S) proxy port, no startup if empty
+http_proxy_ip=0.0.0.0
 http_proxy_port=80
 https_proxy_port=443
 https_just_proxy=true
-http_proxy_ip=0.0.0.0
+#default https certificate setting
+https_default_cert_file=conf/server.pem
+https_default_key_file=conf/server.key
 
 ##bridge
 bridge_type=tcp
