--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -49,3 +49,11 @@ auth_crypt_key =1234567812345678
 
 #Web management multi-user login
 #allow_user_login=true
+
+#extension
+allow_flow_limit=false
+allow_rate_limit=false
+allow_connection_num_limit=false
+allow_multi_ip=false
+
+
