Modular 、Functional enhancement

--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -1,5 +1,5 @@
 [common]
-server_addr=127.0.0.1:8024
+server_addr=123.206.77.88:8024
 conn_type=tcp
 vkey=123
 auto_reconnection=true
@@ -44,7 +44,7 @@ server_port=19009
 [file]
 mode=file
 server_port=19008
-local_path=./
+local_path=/Users/liuhe/Downloads
 strip_pre=/web/
 
 [http]
