--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -1,6 +1,6 @@
 appname = nps
 #Boot mode(dev|pro)
-runmode = pro
+runmode = dev
 
 #HTTP(S) proxy port, no startup if empty
 http_proxy_ip=0.0.0.0
@@ -26,13 +26,14 @@ public_vkey=123
 
 # log level LevelEmergency->0  LevelAlert->1 LevelCritical->2 LevelError->3 LevelWarning->4 LevelNotice->5 LevelInformational->6 LevelDebug->7
 log_level=7
+log_path=nps.log
 
 #Whether to restrict IP access, true or false or ignore
 #ip_limit=true
 
 #p2p
-#p2p_ip=127.0.0.1
-#p2p_port=6000
+p2p_ip=127.0.0.1
+p2p_port=6000
 
 #web
 web_host=a.o.com
@@ -48,12 +49,22 @@ auth_crypt_key =1234567812345678
 #allow_ports=9001-9009,10001,11000-12000
 
 #Web management multi-user login
-#allow_user_login=true
+allow_user_login=false
+allow_user_register=false
+allow_user_change_username=false
+
 
 #extension
 allow_flow_limit=false
 allow_rate_limit=false
+allow_tunnel_num_limit=false
+allow_local_proxy=false
 allow_connection_num_limit=false
 allow_multi_ip=false
+system_info_display=false
+
+#cache
+http_cache=true
+http_cache_length=100
 
 
