--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -32,8 +32,8 @@ log_path=nps.log
 #ip_limit=true
 
 #p2p
-p2p_ip=127.0.0.1
-p2p_port=6000
+#p2p_ip=127.0.0.1
+#p2p_port=6000
 
 #web
 web_host=a.o.com
