增加 web_base_url 配置, 用于配置 web 后台可置于代理子路径下

--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -41,6 +41,9 @@ web_username=admin
 web_password=123
 web_port = 8080
 web_ip=0.0.0.0
+web_base_url=
+# if web under proxy use sub path. like http://host/nps need this.
+#web_base_url=/nps
 
 #Web API unauthenticated IP address(the len of auth_crypt_key must be 16)
 auth_key=test
