new feature multi user auth with socks5

--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -40,7 +40,7 @@ server_port=10000
 [socks5]
 mode=socks5
 server_port=19009
-multi_account=multi_account.conf # 多账户配置文件,配置及代表启动多账户
+multi_account=multi_account.conf
 
 [file]
 mode=file
