--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ go:
   - dev
 
 script:
-
-before_install:
-
+  -  go test -v ./...
 before_deploy:
   - GOARCH=amd64 GOOS=linux  go build cmd/nps/nps.go
   - zip -r server_linux_amd64.zip nps conf web
