--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
   - master
 
 script:
-  -  go test -v ./...
+  -  go test -v ./cmd/nps/
 before_deploy:
   - GOARCH=amd64 GOOS=linux  go build cmd/nps/nps.go
   - zip -r server_linux_amd64.zip nps conf web
