--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_deploy:
   - zip -r server_linux_amd64.zip nps conf web
   - GOARCH=amd64 GOOS=darwin  go build cmd/nps/nps.go
   - zip -r server_macos_amd64.zip nps conf web
+  - GOARCH=amd64 GOOS=windows  go build cmd/nps/nps.go
+  - zip -r server_windows_amd64.zip nps conf web
 
 
 deploy:
