--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_deploy:
 
 deploy:
   provider: releases
-  api_key: ${TOKEN}
+  api_key:
+    secure: ${TOKEN}
   skip_cleanup: true
   file:
     - server_linux_amd64.zip
