--- a/.travis.yml
+++ b/.travis.yml
@@ -151,7 +151,34 @@ deploy:
     secure: ${TOKEN}
   skip_cleanup: true
   file:
-    - server_linux_amd64.zip
+  - freebsd_386_client.tar.gz
+  - freebsd_386_server.tar.gz
+  - freebsd_amd64_client.tar.gz
+  - freebsd_amd64_server.tar.gz
+  - freebsd_arm_client.tar.gz
+  - freebsd_arm_server.tar.gz
+  - linux_386_client.tar.gz
+  - linux_386_server.tar.gz
+  - linux_amd64_client.tar.gz
+  - linux_amd64_server.tar.gz
+  - linux_arm64_client.tar.gz
+  - linux_arm64_server.tar.gz
+  - linux_arm_client.tar.gz
+  - linux_arm_server.tar.gz
+  - linux_mips64le_client.tar.gz
+  - linux_mips64le_server.tar.gz
+  - linux_mips64_client.tar.gz
+  - linux_mips64_server.tar.gz
+  - linux_mipsle_client.tar.gz
+  - linux_mipsle_server.tar.gz
+  - linux_mips_client.tar.gz
+  - linux_mips_server.tar.gz
+  - macos_client.tar.gz
+  - macos_server.tar.gz
+  - win_386_client.tar.gz
+  - win_386_server.tar.gz
+  - win_amd64_client.tar.gz
+  - win_amd64_server.tar.gz
   on:
     tags: true
     all_branches: true
