--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,11 @@ before_deploy:
 
   - CGO_ENABLED=0 GOOS=freebsd GOARCH=arm go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/npc/npc.go
 
+  - tar -czvf freebsd_arm_client.tar.gz npc conf/npc.conf
 
+  - CGO_ENABLED=0 GOOS=linux GOARCH=arm go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/npc/npc.go
+
+  - tar -czvf linux_arm_client.tar.gz npc conf/npc.conf
 
 
   - CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/npc/npc.go
@@ -89,6 +93,10 @@ before_deploy:
   - tar -czvf linux_arm64_server.tar.gz conf/nps.conf conf/tasks.json conf/clients.json conf/hosts.json conf/server.key  conf/server.pem web/views web/static nps
 
 
+  - CGO_ENABLED=0 GOOS=freebsd GOARCH=arm go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/nps/nps.go
+
+  - tar -czvf freebsd_arm_server.tar.gz conf/nps.conf conf/tasks.json conf/clients.json conf/hosts.json conf/server.key  conf/server.pem web/views web/static nps
+
 
   - CGO_ENABLED=0 GOOS=freebsd GOARCH=386 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/nps/nps.go
 
@@ -147,6 +155,8 @@ deploy:
   - freebsd_386_server.tar.gz
   - freebsd_amd64_client.tar.gz
   - freebsd_amd64_server.tar.gz
+  - freebsd_arm_client.tar.gz
+  - freebsd_arm_server.tar.gz
   - linux_386_client.tar.gz
   - linux_386_server.tar.gz
   - linux_amd64_client.tar.gz
