add travis arm 5/6/7

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,17 @@ before_deploy:
 
   - tar -czvf freebsd_arm_client.tar.gz npc conf/npc.conf
 
-  - CGO_ENABLED=0 GOOS=linux GOARCH=arm go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/npc/npc.go
+  - CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=7 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/npc/npc.go
 
-  - tar -czvf linux_arm_client.tar.gz npc conf/npc.conf
+  - tar -czvf linux_arm7_client.tar.gz npc conf/npc.conf
+
+  - CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=6 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/npc/npc.go
+
+  - tar -czvf linux_arm6_client.tar.gz npc conf/npc.conf
+  -
+  - CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=5 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/npc/npc.go
+
+  - tar -czvf linux_arm5_client.tar.gz npc conf/npc.conf
 
 
   - CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/npc/npc.go
