--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_deploy:
   - CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=6 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/npc/npc.go
 
   - tar -czvf linux_arm6_client.tar.gz npc conf/npc.conf
-  -
+
   - CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=5 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/npc/npc.go
 
   - tar -czvf linux_arm5_client.tar.gz npc conf/npc.conf
@@ -91,9 +91,17 @@ before_deploy:
 
   - tar -czvf linux_386_server.tar.gz conf/nps.conf conf/tasks.json conf/clients.json conf/hosts.json conf/server.key  conf/server.pem web/views web/static nps
 
-  - CGO_ENABLED=0 GOOS=linux GOARCH=arm go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/nps/nps.go
+  - CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=5 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/nps/nps.go
 
-  - tar -czvf linux_arm_server.tar.gz conf/nps.conf conf/tasks.json conf/clients.json conf/hosts.json conf/server.key  conf/server.pem web/views web/static nps
+  - tar -czvf linux_arm5_server.tar.gz conf/nps.conf conf/tasks.json conf/clients.json conf/hosts.json conf/server.key  conf/server.pem web/views web/static nps
+
+  - CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=6 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/nps/nps.go
+
+  - tar -czvf linux_arm6_server.tar.gz conf/nps.conf conf/tasks.json conf/clients.json conf/hosts.json conf/server.key  conf/server.pem web/views web/static nps
+
+  - CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=57 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/nps/nps.go
+
+  - tar -czvf linux_arm7_server.tar.gz conf/nps.conf conf/tasks.json conf/clients.json conf/hosts.json conf/server.key  conf/server.pem web/views web/static nps
 
 
   - CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -ldflags "-s -w -extldflags -static -extldflags -static" ./cmd/nps/nps.go
@@ -171,8 +179,12 @@ deploy:
   - linux_amd64_server.tar.gz
   - linux_arm64_client.tar.gz
   - linux_arm64_server.tar.gz
-  - linux_arm_client.tar.gz
-  - linux_arm_server.tar.gz
+  - linux_arm5_client.tar.gz
+  - linux_arm6_client.tar.gz
+  - linux_arm7_client.tar.gz
+  - linux_arm5_server.tar.gz
+  - linux_arm6_server.tar.gz
+  - linux_arm7_server.tar.gz
   - linux_mips64le_client.tar.gz
   - linux_mips64le_server.tar.gz
   - linux_mips64_client.tar.gz
