--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,15 @@ services:
   - docker
 script:
   - go test -v ./cmd/nps/
-  - git clone https://github.com/cnlh/spksrc.git /spksrc
-  - docker run -it -v /spksrc:/spksrc synocommunity/spksrc /bin/bash
-  - cd /spksrc
-  - make setup
-  - cd spksrc/spk/npc
-  - make
-  - exit
+  - git clone https://github.com/cnlh/spksrc.git ~/spksrc
+  - docker run -itd --name spksrc -v ~/spksrc:/spksrc synocommunity/spksrc /bin/bash
+  - docker exec -it spksrc /bin/bash -c 'cd /spksrc && make setup && cd /spksrc/spk/npc && make'
   - export DOCKER_CLI_EXPERIMENTAL=enabled
+  - export VERSION=0.24.1
   - docker run --rm --privileged docker/binfmt:66f9012c56a8316f9244ffd7622d7c21c1f6f28d
   - docker buildx create --use --name mybuilder
-  - docker buildx build --tag ffdfgdfg/nps:0.24.0 --output type=image,push=true --file Dockerfile.nps --platform=linux/amd64,linux/arm64,linux/386,linux/arm .
-  - docker buildx build --tag ffdfgdfg/npc:0.24.0 --output type=image,push=true --file Dockerfile.npc --platform=linux/amd64,linux/arm64,linux/386,linux/arm .
+  - docker buildx build --tag ffdfgdfg/nps:$VERSION --output type=image,push=true --file Dockerfile.nps --platform=linux/amd64,linux/arm64,linux/386,linux/arm .
+  - docker buildx build --tag ffdfgdfg/npc:$VERSION --output type=image,push=true --file Dockerfile.npc --platform=linux/amd64,linux/arm64,linux/386,linux/arm .
 before_deploy:
   - wget https://github.com/upx/upx/releases/download/v3.95/upx-3.95-amd64_linux.tar.xz
   - tar -xvf upx-3.95-amd64_linux.tar.xz
