--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
   allow_failures:
   - os: windows
 before_deploy:
-  - ./build.sh
+  - chmod +x ./build.sh && ./build.sh
 
 deploy:
   provider: releases
