--- a/.travis.yml
+++ b/.travis.yml
@@ -44,12 +44,12 @@ deploy:
   - linux_mipsle_server.tar.gz
   - linux_mips_client.tar.gz
   - linux_mips_server.tar.gz
-  - macos_client.tar.gz
-  - macos_server.tar.gz
-  - win_386_client.tar.gz
-  - win_386_server.tar.gz
-  - win_amd64_client.tar.gz
-  - win_amd64_server.tar.gz
+  - darwin_amd64_client.tar.gz
+  - darwin_amd64_server.tar.gz
+  - windows_386_client.tar.gz
+  - windows_386_server.tar.gz
+  - windows_amd64_client.tar.gz
+  - windows_amd64_server.tar.gz
   - npc_syno.spk
   - npc_sdk.tar.gz
   on:
