change default log path

--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -26,7 +26,7 @@ public_vkey=123
 
 # log level LevelEmergency->0  LevelAlert->1 LevelCritical->2 LevelError->3 LevelWarning->4 LevelNotice->5 LevelInformational->6 LevelDebug->7
 log_level=7
-log_path=nps.log
+#log_path=nps.log
 
 #Whether to restrict IP access, true or false or ignore
 #ip_limit=true
