--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -42,6 +42,9 @@ web_password=123
 web_port = 8080
 web_ip=0.0.0.0
 web_base_url=
+web_open_ssl=false
+web_cert_file=conf/server.pem
+web_key_file=conf/server.key
 # if web under proxy use sub path. like http://host/nps need this.
 #web_base_url=/nps
 
