--- a/Dockerfile.npc
+++ b/Dockerfile.npc
@@ -1,10 +1,10 @@
 FROM golang as builder
-WORKDIR /go/src/github.com/cnlh/nps
+WORKDIR /go/src/ehang.io/nps
 COPY . .
 RUN go get -d -v ./... 
 RUN CGO_ENABLED=0 go build -ldflags="-w -s -extldflags -static" ./cmd/npc/npc.go
 
 FROM scratch
-COPY --from=builder /go/src/github.com/cnlh/nps/npc /
+COPY --from=builder /go/src/ehang.io/nps/npc /
 VOLUME /conf
 ENTRYPOINT ["/npc"]
