--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -49,7 +49,8 @@ web_key_file=conf/server.key
 #web_base_url=/nps
 
 #Web API unauthenticated IP address(the len of auth_crypt_key must be 16)
-auth_key=test
+#Remove comments if needed
+#auth_key=test
 auth_crypt_key =1234567812345678
 
 #allow_ports=9001-9009,10001,11000-12000
