--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -12,6 +12,7 @@ web_username=user
 web_password=1234
 crypt=true
 compress=true
+#pprof_addr=0.0.0.0:9999
 
 [health_check_test1]
 health_check_timeout=1
