add custom client disconnect timeout option, close #485

--- a/conf/npc.conf
+++ b/conf/npc.conf
@@ -13,6 +13,7 @@ web_password=1234
 crypt=true
 compress=true
 #pprof_addr=0.0.0.0:9999
+disconnect_timeout=60
 
 [health_check_test1]
 health_check_timeout=1
