--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -80,3 +80,6 @@ http_add_origin_header=false
 #pprof debug options
 #pprof_ip=0.0.0.0
 #pprof_port=9999
+
+#client disconnect timeout
+disconnect_timeout=60
